@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2002-11-26  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/ia64/divrem_1.asm: New file.
+
 2002-11-25  Torbjorn Granlund  <tege@swox.com>
 
 	* mpfr/tests/tdiv.c: Decrease number of performed tests.
